# clock

./: CHANGELOG.md  Cargo.toml  README.md  cuddle.yaml  timetable.json
crates/clock/: Cargo.toml
crates/clock/src/: main.rs
crates/clockin/: Cargo.toml
crates/clockin/src/: main.rs
