[package]
name = "clockin"
edition = "2021"

version.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true

serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
dirs = "6.0.0"
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
